Added local spamming using ffi
Please see /examples/local_spammer.js

--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
     "name": "iota.keccak.js",
-    "version": "0.0.1",
-    "description": "Port of iota.lib.js kerl functions (address creation / bundle / signing) utilizing a native build of keccak and some other tweaks",
+    "version": "0.0.2",
+    "description": "Port of iota.lib.js kerl functions (address creation / bundle / signing) utilizing a C build of keccak and some other tweaks",
     "main": "./iota.keccak.js",
     "keywords": [
         "iota",
         "tangle"
     ],
     "author": {
-        "name":"SteppoFF"
+        "name": "SteppoFF"
     },
     "license": "MIT",
     "dependencies": {
         "crypto-js": "^3.1.9-1",
         "keccak": "^1.4.0"
+        "ffi": "^2.2.0"
     },
     "repository": {
         "type": "git",
