--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "license": "MIT",
     "dependencies": {
         "crypto-js": "^3.1.9-1",
-        "keccak": "^1.4.0"
+        "keccak": "^1.4.0",
         "ffi": "^2.2.0"
     },
     "repository": {
