--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     },
     "license": "MIT",
     "dependencies": {
-        "crypto-js": "^3.1.9-1",
-        "keccak": "^1.4.0",
-        "ffi": "^2.2.0"
+        "crypto-js": "^4.0.0",
+        "keccak": "^3.0.1",
+        "blakejs": "^1.1.0",
+        "ffi": "^2.3.0"
     },
     "repository": {
         "type": "git",
